# hs5

./: .env  .gitignore  ApiHandler.cpp  ApiHandler.h  Auth.cpp  Buckets.cpp  Buckets.h  CMakeLists.txt  CMakePresets.json  DbDao.cpp  DbDao.h  File.cpp  File.h  Policy.cpp  Policy.h  README.md  Session.h  SingleFileStorage.cpp  SingleFileStorage.h  StaticHandler.cpp  StaticHandler.h  api.yml  buckets.cpp  build.sh  clean.sh  cmd.cpp  config.h.in  crypt.cpp  crypt.h  data.cpp  data.h  go.mod  main.cpp  main.h  os_functions.cpp  os_functions.h  pyproject.toml  s3handler.cpp  s3handler.h  utils.cpp  (+3 more)
.github/workflows/: ci.yml  jekyll-gh-pages.yml  pages-deploy.yml  release.yml
apigen/: AddUserParams.cpp  AddUserParams.hpp  ApiError.cpp  ApiError.hpp  Error.hpp  GeneratorsAddUserResp.hpp  GeneratorsApiError.hpp  GeneratorsHapiError.hpp  GeneratorsListParams.hpp  GeneratorsListResp.hpp  GeneratorsLoginParams.hpp  HapiError.cpp  ListParams.cpp  ListParams.hpp  ListResp.cpp  LoginParams.hpp  LoginResp.hpp
custom-ports/duckdb-custom/: excel-libname.patch  extensions.patch  portfile.cmake  vcpkg.json
custom-ports/sqlite-cpp-sqlgen/: portfile.cmake  vcpkg.json
homepage/: 0_features.md  1_impressions.md  2_community.md  5_download.md  Gemfile  _config.yml  changelog.md  faq.md  imprint.md  index.md  news.md
homepage/_includes/: pages_list.html
homepage/_layouts/: default.html
homepage/_plugins/: grids.rb  sass-plugin.rb
homepage/_posts/: 2024-12-22-test.md
homepage/_tabs/: about.md  config.md  download.md  getting_started.md  use_cases.md
homepage/bench/: data.js
homepage/css/: main.scss
homepage/dev/bench/: data.js
homepage/feed/: index.xml
lmdb/: cppmidl.cpp  lmdb.h  mdb.c
schemas/: AddUserResp.json  ApiError.json  HapiError.json  LoginParams.json  LoginResp.json
src/: Action.cpp  Action.h  ApiHandler.cpp  ApiHandler.h  Auth.cpp  Auth.h  Buckets.cpp  Buckets.h  ContentType.cpp  ContentType.h  DbDao.cpp  DbDao.h  DuckDbFs.cpp  DuckDbFs.h  File.h  ObjMetadata.cpp  ObjMetadata.h  PayloadHash.cpp  PayloadHash.h  Policy.cpp  Policy.h  Session.cpp  Session.h  SingleFileStorage.cpp  SingleFileStorage.h  StaticHandler.cpp  UserMetadata.cpp  UserMetadata.h  WalFile.cpp  WalFile.h  api.yml  cmd.cpp  config.h.in  crypt.cpp  crypt.h  data.cpp  data.h  main.cpp  main.h  os_functions.cpp  (+6 more)
src/apigen/: AccessKey.hpp  AddAccessKeyParams.cpp  AddAccessKeyParams.hpp  AddAccessKeyResp.cpp  AddAccessKeyResp.hpp  AddBucketParams.cpp  AddBucketParams.hpp  AddBucketPermission.hpp  AddBucketPermissionParams.cpp  AddBucketPermissionParams.hpp  AddBucketPermissionResp.cpp  AddBucketPermissionResp.hpp  AddBucketResp.cpp  AddBucketResp.hpp  AddPolicyParams.cpp  AddPolicyParams.hpp  AddPolicyResp.cpp  AddPolicyResp.hpp  AddRoleParams.cpp  AddRoleParams.hpp  AddRolePolicyParams.cpp  AddRolePolicyParams.hpp  AddRolePolicyResp.cpp  AddRolePolicyResp.hpp  AddRoleResp.cpp  AddRoleResp.hpp  AddUserParams.hpp  AddUserResp.cpp  AddUserResp.hpp  AddUserRoleParams.cpp  AddUserRoleParams.hpp  AddUserRoleResp.cpp  AddUserRoleResp.hpp  BucketPermission.hpp  ChangePasswordParams.cpp  ChangePasswordParams.hpp  ChangePasswordResp.cpp  ChangePasswordResp.hpp  ChangePolicyParams.cpp  ChangePolicyParams.hpp  (+162 more)
src/schemas/: AddAccessKeyParams.json  AddAccessKeyResp.json  AddBucketParams.json  AddBucketPermissionParams.json  AddBucketPermissionResp.json  AddBucketResp.json  AddPolicyParams.json  AddPolicyResp.json  AddRoleParams.json  AddRolePolicyParams.json  AddUserParams.json  AddUserResp.json  AddUserRoleParams.json  ChangePasswordParams.json  ChangePolicyParams.json  DeleteBucketParams.json  HapiError.json  ListAccessKeysParams.json  ListAccessKeysResp.json  ListBucketPermissionsParams.json  ListBucketPermissionsResp.json  ListParams.json  ListPoliciesParams.json  ListPoliciesResp.json  ListResp.json  ListRolePoliciesParams.json  ListRolePoliciesResp.json  ListRolesResp.json  ListUserRolesResp.json  ListUsersParams.json  ListUsersResp.json  LoginResp.json  LogoutParams.json  RemoveAccessKeyParams.json  RemoveRoleResp.json  RemoveUserParams.json  SessionCheckParams.json  SessionCheckResp.json  SetBucketPublicParams.json  StatsResp.json
test/: conftest.py  gen_api_client.sh  hs5_commit.py  requirements.txt  test_api.py  test_basic.py  test_interrupt.py  test_perf.py  test_upload.py
test/awsgosdktest/: __init__.py  go.mod  go.sum  main.go
test/garage_fixture/: __init__.py
test/hs5_api_client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
test/hs5_api_client/.openapi-generator/: FILES
test/hs5_api_client/docs/: AddAccessKeyParams.md  AddAccessKeyResp.md  AddBucketParams.md  AddBucketPermissionParams.md  AddBucketPermissionResp.md  AddBucketResp.md  AddPolicyParams.md  AddPolicyResp.md  AddRoleParams.md  AddRolePolicyParams.md  AddRolePolicyResp.md  AddRoleResp.md  AddUserParams.md  AddUserResp.md  AddUserRoleParams.md  AddUserRoleResp.md  ChangePasswordParams.md  ChangePasswordResp.md  ChangePolicyParams.md  ChangePolicyResp.md  DefaultApi.md  DeleteBucketParams.md  DeleteBucketResp.md  HapiError.md  ListAccessKeysParams.md  ListAccessKeysResp.md  ListAccessKeysRespAccessKeysInner.md  ListBucketPermissionsParams.md  ListBucketPermissionsResp.md  ListBucketPermissionsRespBucketPermissionsInner.md  ListParams.md  ListPoliciesParams.md  ListPoliciesResp.md  ListPoliciesRespPoliciesInner.md  ListResp.md  ListRespObjectsInner.md  ListRolePoliciesParams.md  ListRolePoliciesResp.md  ListRolePoliciesRespRolePoliciesInner.md  ListRolesParams.md  (+30 more)
test/hs5_api_client/hs5_api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
test/hs5_api_client/test/: test_add_access_key_params.py  test_add_access_key_resp.py  test_add_role_resp.py  (+67 more)
test/hs5_fixture/: __init__.py
test/minio_fixture/: __init__.py
test/miniosdktest/: __init__.py  go.mod  go.sum  miniosdktest.go
test/rustfs_fixture/: __init__.py
www/: Readme.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
www/src/: App.tsx
wwwgen/: www_files.cpp  www_files.h  wwwgen.py
(+99 files in other folders)
